* ESP can scan surrounding WiFi ssids and store them in volatile memory * ESP provides an setupPage.html to select a ssid / input a ssid and its password   * On setupPage.html you can press connect to send the data to the ESP back * ESP can receive the data from setupPage.html but doesn't do anything with it yet!

--- a/data/style.css
+++ b/data/style.css
@@ -227,3 +227,20 @@ canvas {display:block;}
   box-sizing: border-box;
   vertical-align: middle;
 }
+
+table {
+  width: 100%;
+  border-collapse: collapse;
+}
+th, td {
+  padding: 8px;
+  text-align: left;
+  border: 1px solid #9d0000;
+}
+tr:hover {
+  background-color: #9d0000;
+  cursor: pointer;
+}
+tr.selected {
+  background-color: #9d0000;
+}
